style.css
html {
    background-color: black;
    color: whitesmoke;
    font-family: "Roboto";
    font-size: 16px;
    text-align: center;
}

.header-container {
    display: flex;
    flex-direction: row;
    margin: 1.5rem auto 0;
}

.header-container .left-container {
    width: 10%;
}

.header-container .right-container {
    width: 10%;
    align-content: center;
    text-align: right;
}

header h1 {
    text-transform: uppercase;
    font-size: 4rem;
    width: 80%;
    margin: 0;
}

nav {
    display: inline-flex;
    flex-direction: row;
    background-color: rgba(128, 128, 128, 0.5);
    width: 80%;
    justify-content: center;
    margin: 1.5rem auto 1.5rem;
}

nav ul {
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    padding: 0;
}

nav li {
    margin: 0 1rem;
    font-size: 2rem;
}

a {
    text-decoration: none;
    color: whitesmoke;
}

a:hover {
    transform: scale(1.1);
    font-weight: bolder;
    text-decoration: underline;
}

nav a {
    display: block;
}

.dropdown-menu {
    display: none;
    position: relative;
    margin-right: 0.5rem;
}

.bar1,
.bar2,
.bar3 {
    width: 2rem;
    height: 0.25rem;
    margin: 0.25rem 0;
    background-color: whitesmoke;
}

.dropdown-content {
    display: none;
    flex-direction: column;
    background-color: rgba(128, 128, 128, 0.5);
    border-style: solid;
    border-color: whitesmoke;
    font-size: 1.5rem;
    text-align: left;
    position: absolute;
    right: 1rem;
    top: 6rem;
    z-index: 1;
}

.dropdown-content a {
    margin: 0.25rem;
}

.show {
    display: inline-flex;
}

.section {
    width: 80%;
    background-color: rgba(128, 128, 128, 0.5);
    margin: 0 auto 1.5rem;
}

h2 {
    font-size: 3rem;
    margin: 0 auto;
    padding: 1rem;
}

h3 {
    font-size: 2rem;
    margin: 0 auto;
    text-align: center;
}

#about p {
    font-size: 1.5rem;
    text-align: left;
    margin: 1rem 3rem 1rem 3rem;
    width: 100%;
}

.content-container {
    display: inline-flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

#skills .image-container {
    height: 6rem;
    padding: 1.5rem 3rem 1.5rem 3rem; /* Manipulate the left/right padding to space appropriately depending on the number of icons displayed */
}

.image-container img {
    height: 100%;
}

.image-container {
    position: relative;
    display: inline-block;
}

.tooltip-text {
  visibility: hidden; /* Hidden by default */
  width: 8rem;
  background-color: black;
  color: #ffffff;
  padding: 5px 0;
  border-radius: 6px;
  position: absolute;
  z-index: 1; /* Ensure tooltip is displayed above content */
  margin-left: -4rem;
  left: 50%;
}

.image-container:hover .tooltip-text {
    visibility: visible;
}

#skills img:hover {
    transform: scale(1.2);
}

.project-container {
    display: inline-block;
    width: 100%;
    text-align: left;
    margin: 1rem;
    background-color: rgba(128, 128, 128, 0.5);
    border-radius: 5px;
    padding: 1rem;
}

#projects .image-container {
    height: 4rem;
    padding: 1.5rem;
    text-align: center;
    display: block;
}

#contact .image-container {
    height: 2rem;
    padding: 1.5rem;
}

#contact img:hover {
    transform: scale(1.2);
}

@media only screen and (min-width: 801px) {
    .dropdown-content {
        display: none;
    }
}

@media only screen and (max-width:800px) {
    nav ul {
        display: none;
    }

    .dropdown-menu {
        display: inline-block;
    }

    .section {
        width: unset;
    }    
}

@media only screen and (max-width:930px) {

    #skills .image-container {
        height: 4rem;
        padding: 1rem;
    }

    .project-container {
        width: unset;
    }

    #about p {
        margin: 1rem;
    }
}

@media only screen and (max-width: 540px) {
    .header-container .left-container {
        width: 25%;
    }

    .header-container .right-container {
        width: 25%;
    }

    header h1 {
        width: 50%;
    }

    .dropdown-content {
        top: 8rem;
    }
}

@media only screen and (max-width:400px) {
    #skills .image-container {
        height: 3rem;
        padding: 0.5rem;
    }

    #contact .image-container {
        height: 2rem;
        padding: 1rem;
    }

    .header-container .left-container {
        width: 10%;
    }

    .header-container h1 {
        text-align: left;
        width: 80%;
    }

    .header-container .right-container {
        width: 10%;
    }

}

